Fixed overflowing text in codeblocks

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -238,6 +238,7 @@ input, select, textarea {
     /* Other styles for code blocks */
     background-color: #f1f1f1;
     padding: 10px;
+	overflow-x: auto;
 }
 
 code {
